<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".AddTask">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="660dp"
        android:text="Add Task"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="364dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/p4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.319"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText

        android:id="@+id/edit1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/edit_text_border"
        android:backgroundTint="@color/white"
        android:hint="Task Title"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText

        android:id="@+id/edit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:backgroundTint="@color/white"
        android:hint="Task Description"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit1"
        app:layout_constraintVertical_bias="0.263" />

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.60">

        <RadioButton
            android:id="@+id/completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20px"
            android:text="completed"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/in_progress"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:padding="20px"
            android:text="in progress"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/new_task"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:padding="20px"
            android:text="New"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/assigned"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:padding="20px"
            android:text="assigned"
            android:textColor="@color/white" />
    </RadioGroup>


    <Spinner
        android:id="@+id/planets_spinner"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:background="@drawable/spinner_bg"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.777"

        />

    <ImageView
        android:id="@+id/IdProf"
        android:layout_width="113dp"
        android:layout_height="68dp"
        android:background="@drawable/edit_text_border"
        android:src="@android:drawable/ic_menu_upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.801"
        android:onClick="upload"
        />


    <Switch
        android:id="@+id/simpleSwitch"
        android:layout_width="107dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />

    <Button
        android:visibility="invisible"
        android:id="@+id/up_f"
        android:text="upload file"
        android:onClick="upload_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.789" />

    <Button

        android:id="@+id/button"
        android:layout_width="122dp"
        android:layout_height="53dp"
        android:backgroundTint="@color/purple_200"
        android:onClick="click"
        android:text="Add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.945" />

    <androidx.fragment.app.FragmentContainerView
        class="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/map"
        android:layout_width="233dp"
        android:layout_height="106dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>